--- a/layouts/partials/disqus.html
+++ b/layouts/partials/disqus.html
@@ -24,4 +24,11 @@
 </section>
 {{ end }}
 
+<script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 
